Terminando de diseñar el dashboard de usuario

--- a/src/app/pages/usuario/user-dashboard/user-dashboard.component.css
+++ b/src/app/pages/usuario/user-dashboard/user-dashboard.component.css
@@ -36,4 +36,6 @@
     border-radius: 6px;
     color: white;
     text-decoration: none;
+    display: flex;
+    justify-content: space-between;
 }
