--- a/src/app/pages/usuario/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/usuario/user-dashboard/user-dashboard.component.html
@@ -6,10 +6,22 @@
                     <img src="../../../../assets/images/user-default.png">
                 </div>
                 <div class="user-buttoms">
-                    <a class="btn-user" routerLink="/user/informacion"><i class="bi bi-person-lines-fill"></i> Información del usuario</a>
-                    <a class="btn-user" routerLink="/user/historial"><i class="bi bi-card-list"></i> Historial de Pedidos</a>
-                    <a class="btn-user" routerLink="/user/preguntas"><i class="bi bi-info-circle"></i> FAQ</a>
-                    <a class="btn-user" routerLink="/user/ayuda"><i class="bi bi-question-circle"></i> Ayuda</a>
+                    <a class="btn-user" routerLink="/user/informacion">
+                        <div><i class="bi bi-person-lines-fill"></i> Información del usuario </div>
+                        <i class="bi bi-caret-right-fill"></i>
+                    </a>
+                    <a class="btn-user" routerLink="/user/historial">
+                        <div><i class="bi bi-card-list"></i> Historial de Pedidos </div>
+                        <i class="bi bi-caret-right-fill"></i>
+                    </a>
+                    <a class="btn-user" routerLink="/user/preguntas">
+                        <div><i class="bi bi-info-circle"></i> FAQ </div>
+                        <i class="bi bi-caret-right-fill"></i>
+                    </a>
+                    <a class="btn-user" routerLink="/user/ayuda">
+                        <div><i class="bi bi-question-circle"></i> Ayuda </div>
+                        <i class="bi bi-caret-right-fill"></i>
+                    </a>
                 </div>
             </div>
         </div>
