--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,8 +1,48 @@
-.navCustom {
+@import url('https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap');
+
+.navbar {
     background-color: #B10303;
+    padding-top: 12px;
+    padding-bottom: 12px;
     height: 64px;
 }
 
-.text-white {
+.navbar-brand {
+    font-family: "Rowdies", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     color: white;
+    margin-left: 15px;
+}
+
+.navbar-brand:hover {
+    color: white;
+}
+
+.navbar-brand-container {
+    display: flex;
+    align-items: center;
+}
+
+.nav-link{
+    font-family: "Blinker", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    color: white;
+    font-size: 1.15em;
+
+}
+
+.nav-link:hover {
+    color: white;
+}
+
+li{
+    margin-right: 15px;
+}
+
+.mant-dropdown {
+    background-color: #FFF1F1;
+    border: 1px solid #B10303;
 }
