--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,20 +1,50 @@
-<nav class="navbar navbar-expand-lg navCustom">
-    <div class="container-fluid">
-        <div>
-            <img src="../../../assets/images/logo_foodie.png" width="40">
-            <a class="navbar-brand" href="#" style="color: white;">Navbar</a>
+<nav class="navbar navbar-expand-lg">
+    <div class="container">
+        <div class="navbar-brand-container">
+            <img src="../../../assets/images/logo_foodie.png" width="45">
+            <a class="navbar-brand" href="#"><strong>FOODIE</strong></a>
         </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav" style="color:white;">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                <a class="nav-link" href="#">Restaurantes</a>
-                <a class="nav-link" href="#">Registrarse</a>
-                <a class="nav-link" href="#">Login</a>
-            </div>
+        <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" [routerLink]="'/'">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="'/restaurantes'">Restaurantes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="'/menus'">Menu</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"aria-expanded="false">Mantenimiento</a>
+                    <ul class="dropdown-menu mant-dropdown">
+                        <li><a class="dropdown-item" [routerLink]="'/admin/gestion-restaurantes'">Restaurantes</a></li>
+                        <li><a class="dropdown-item" [routerLink]="'/admin/gestion-menu'">Menús</a></li>
+                        <li><a class="dropdown-item" [routerLink]="'/admin/gestion-asociados'">Asociados</a></li>
+                        <li><a class="dropdown-item" [routerLink]="'/admin/gestion-user'">Usuarios</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Usuario</a>
+                    <ul class="dropdown-menu mant-dropdown">
+                        <li><a class="dropdown-item" [routerLink]="'/user'">Perfil</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="'/registro'">Registrarse</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="'/login'">Login</a>
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
