--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="navbar-brand-container">
             <img src="../../../assets/images/logo_foodie.png" width="45">
-            <a class="navbar-brand" href="#"><strong>FOODIE</strong></a>
+            <a class="navbar-brand" href="#">FOODIE</a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
