--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,2 +1,11 @@
-<p>login works!</p>
-<h1>Hola World</h1>
+<div class="login">
+    <div class="container">
+        <div class="card-login">
+            <img src="../../../assets/images/logo_foodie_rojo.png" class="login-image">
+            <input type="email" placeholder="Email:" class="login-input-email">
+            <input type="password" placeholder="Contraseña:" class="login-input-contraseña">
+            <button class="login-button">INICIAR SESIÓN</button>
+            <button class="login-google-button">INICIAR CON GOOGLE</button>
+        </div>
+    </div>
+</div>
