--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,19 @@
-<footer class="footerCustom ">
-
+<footer class="py-4">
+    <div class="container">
+        <div class="d-flex justify-content-around align-items-center">
+            <div>
+                &copy; 2024 Copyright: Foodie
+            </div>
+            <div className="social-icons">
+                <a href="https://www.whatsapp.com/" target="_blank" rel="noopener noreferrer" class="social-icon">
+                    <i class="bi bi-whatsapp"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" class="social-icon">
+                    <i class="bi bi-facebook"></i></a>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer" class="social-icon">
+                    <i class="bi bi-twitter-x"></i></a>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="social-icon">
+                    <i class="bi bi-instagram"></i></a>
+            </div>
+        </div>
+    </div>
 </footer>
