--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -26,7 +26,7 @@
     font-weight: 700;
     font-style: normal;
     color: white;
-    font-size: 1.15em;
+    font-size: 1.20em;
 
 }
 
@@ -41,4 +41,5 @@ li{
 .mant-dropdown {
     background-color: #FFF1F1;
     border: 1px solid #B10303;
+    font-family: "Blinker", sans-serif;
 }
