--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
                     <a class="nav-link" [routerLink]="'/restaurantes'">Restaurantes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="'/menus'">Menu</a>
+                    <a class="nav-link" [routerLink]="'/menus'">Menú</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"aria-expanded="false">Mantenimiento</a>
