Agregando la info, los restaurantes y gestión de restaurantes

--- a/src/app/pages/admin/gestion-rest/gestion-rest.component.html
+++ b/src/app/pages/admin/gestion-rest/gestion-rest.component.html
@@ -1,1 +1,60 @@
-<p>gestion-rest works!</p>
+<main class="p-5">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <h2 class="titulo">Gestión de Restaurantes</h2>
+        <button class="btn btn-agregar"><i class="bi bi-plus-circle"></i> Registrar</button>
+    </div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Nombre</th>
+                <th scope="col">Descripción</th>
+                <th scope="col">Categorías</th>
+                <th scope="col">Imagen</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>KFC</td>
+                <td>Descripción del producto 1</td>
+                <td>Pollerías</td>
+                <td><img src="../../../../assets/images/imgPrueba/KFC-Logo.png" alt="Imagen 1"></td>
+                <td><button class="btn-edit"><i class="bi bi-pencil-square"></i></button></td>
+                <td><button class="btn-delete"><i class="bi bi-trash3-fill"></i></button></td>
+            </tr>
+            <tr>
+                <td>Bembos</td>
+                <td>Descripción del producto 2</td>
+                <td>Hamburgueserias</td>
+                <td><img src="../../../../assets/images/imgPrueba/Bembos.png" alt="Imagen 2"></td>
+                <td><button class="btn-edit"><i class="bi bi-pencil-square"></i></button></td>
+                <td><button class="btn-delete"><i class="bi bi-trash3-fill"></i></button></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><img src="" alt=""></td>
+                <td><button class="btn-edit"><i class="bi bi-pencil-square"></i></button></td>
+                <td><button class="btn-delete"><i class="bi bi-trash3-fill"></i></button></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><img src="" alt=""></td>
+                <td><button class="btn-edit"><i class="bi bi-pencil-square"></i></button></td>
+                <td><button class="btn-delete"><i class="bi bi-trash3-fill"></i></button></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><img src="" alt=""></td>
+                <td><button class="btn-edit"><i class="bi bi-pencil-square"></i></button></td>
+                <td><button class="btn-delete"><i class="bi bi-trash3-fill"></i></button></td>
+            </tr>
+        </tbody>
+    </table>
+</main>
