--- a/src/app/pages/restaurantes/restaurantes.component.html
+++ b/src/app/pages/restaurantes/restaurantes.component.html
@@ -1,56 +1,150 @@
-<p>restaurantes works!</p>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabla HTML</title>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
-            border: 1px solid #dddddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
-</head>
-<body>
-
-<h2>Ejemplo de tabla HTML</h2>
-
-<table>
-    <thead>
-        <tr>
-            <th>Nombre</th>
-            <th>Edad</th>
-            <th>País</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Juan</td>
-            <td>25</td>
-            <td>Argentina</td>
-        </tr>
-        <tr>
-            <td>María</td>
-            <td>30</td>
-            <td>España</td>
-        </tr>
-        <tr>
-            <td>Ali</td>
-            <td>22</td>
-            <td>Egipto</td>
-        </tr>
-    </tbody>
-</table>
-
-</body>
-</html>
+<main class="contaner-fluid p-4">
+    <section class="categorias">
+        <div class="categoria">Todos</div>
+        <div class="categoria">Pollerias</div>
+        <div class="categoria">Hamburgueserias</div>
+        <div class="categoria">Pizzerias</div>
+        <div class="categoria">Chifas</div>
+        <div class="categoria">Parrillas</div>
+        <div class="categoria">Tradicionales</div>
+    </section>
+    <section class="restaurantes p-4">
+        <div class="rest-items">
+            <div class="card card-custom h-70">
+                <img src="../../../assets/images/imgPrueba/KFC-Logo.png" class="card-img-top img-custom" alt="Imagen 2">
+                <div class="card-body">
+                    <h5 class="card-title text-center mb-2"><strong>KFC</strong></h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius
+                        lectus sit amet enim ultrices, in dignissim lacus bibendum, in dignissim lacus bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius
+                        lectus sit amet enim ultrices, in dignissim lacus bibendum, in dignissim lacus bibendum.</p>
+                    <div class="text-center p-2">
+                        <a href="#" class="btn-custom">Visitar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card card-custom h-70">
+                <img src="../../../assets/images/imgPrueba/Johns.jpg" class="card-img-top img-custom" alt="Imagen 2">
+                <div class="card-body">
+                    <h5 class="card-title text-center mb-2"><strong>Papa Johns</strong></h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius
+                        lectus sit amet enim ultrices, in dignissim lacus bibendum, in dignissim lacus bibendum.</p>
+                    <div class="text-center p-2">
+                        <a href="#" class="btn-custom">Visitar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card card-custom h-80">
+                <img src="../../../assets/images/imgPrueba/Bembos.png" class="card-img-top img-custom" alt="Imagen 3">
+                <div class="card-body">
+                    <h5 class="card-title text-center mb-2"><strong>Bembos</strong></h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius
+                        lectus sit amet enim ultrices, in dignissim lacus bibendum, in dignissim lacus bibendum.</p>
+                    <div class="text-center p-2">
+                        <a href="#" class="btn-custom">Visitar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card card-custom h-70">
+                <img src="../../../assets/images/imgPrueba/Pardos.jpg" class="card-img-top img-custom" alt="Imagen 4">
+                <div class="card-body">
+                    <h5 class="card-title text-center mb-2"><strong>Pardos Chicken</strong></h5>
+                    <p class="card-text ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius
+                        lectus sit amet enim ultrices, in dignissim lacus bibendum, in dignissim lacus bibendum.</p>
+                    <div class="text-center p-2">
+                        <a href="#" class="btn-custom">Visitar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card card-custom h-70">
+                <img src="../../../assets/images/imgPrueba/KFC-Logo.png" class="card-img-top img-custom" alt="Imagen 2">
+                <div class="card-body">
+                    <h5 class="card-title text-center mb-2"><strong>KFC</strong></h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius
+                        lectus sit amet enim ultrices, in dignissim lacus bibendum, in dignissim lacus bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius
+                        lectus sit amet enim ultrices, in dignissim lacus bibendum, in dignissim lacus bibendum.</p>
+                    <div class="text-center p-2">
+                        <a href="#" class="btn-custom">Visitar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card card-custom h-70">
+                <img src="../../../assets/images/imgPrueba/Johns.jpg" class="card-img-top img-custom" alt="Imagen 2">
+                <div class="card-body">
+                    <h5 class="card-title text-center mb-2"><strong>Papa Johns</strong></h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius
+                        lectus sit amet enim ultrices, in dignissim lacus bibendum, in dignissim lacus bibendum.</p>
+                    <div class="text-center p-2">
+                        <a href="#" class="btn-custom">Visitar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card card-custom h-80">
+                <img src="../../../assets/images/imgPrueba/Bembos.png" class="card-img-top img-custom" alt="Imagen 3">
+                <div class="card-body">
+                    <h5 class="card-title text-center mb-2"><strong>Bembos</strong></h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius
+                        lectus sit amet enim ultrices, in dignissim lacus bibendum, in dignissim lacus bibendum.</p>
+                    <div class="text-center p-2">
+                        <a href="#" class="btn-custom">Visitar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card card-custom h-70">
+                <img src="../../../assets/images/imgPrueba/Pardos.jpg" class="card-img-top img-custom" alt="Imagen 4">
+                <div class="card-body">
+                    <h5 class="card-title text-center mb-2"><strong>Pardos Chicken</strong></h5>
+                    <p class="card-text ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius
+                        lectus sit amet enim ultrices, in dignissim lacus bibendum, in dignissim lacus bibendum.</p>
+                    <div class="text-center p-2">
+                        <a href="#" class="btn-custom">Visitar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card card-custom h-70">
+                <img src="../../../assets/images/imgPrueba/KFC-Logo.png" class="card-img-top img-custom" alt="Imagen 2">
+                <div class="card-body">
+                    <h5 class="card-title text-center mb-2"><strong>KFC</strong></h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius
+                        lectus sit amet enim ultrices, in dignissim lacus bibendum, in dignissim lacus bibendum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius
+                        lectus sit amet enim ultrices, in dignissim lacus bibendum, in dignissim lacus bibendum.</p>
+                    <div class="text-center p-2">
+                        <a href="#" class="btn-custom">Visitar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card card-custom h-70">
+                <img src="../../../assets/images/imgPrueba/Johns.jpg" class="card-img-top img-custom" alt="Imagen 2">
+                <div class="card-body">
+                    <h5 class="card-title text-center mb-2"><strong>Papa Johns</strong></h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius
+                        lectus sit amet enim ultrices, in dignissim lacus bibendum, in dignissim lacus bibendum.</p>
+                    <div class="text-center p-2">
+                        <a href="#" class="btn-custom">Visitar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card card-custom h-80">
+                <img src="../../../assets/images/imgPrueba/Bembos.png" class="card-img-top img-custom" alt="Imagen 3">
+                <div class="card-body">
+                    <h5 class="card-title text-center mb-2"><strong>Bembos</strong></h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius
+                        lectus sit amet enim ultrices, in dignissim lacus bibendum, in dignissim lacus bibendum.</p>
+                    <div class="text-center p-2">
+                        <a href="#" class="btn-custom">Visitar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card card-custom h-70">
+                <img src="../../../assets/images/imgPrueba/Pardos.jpg" class="card-img-top img-custom" alt="Imagen 4">
+                <div class="card-body">
+                    <h5 class="card-title text-center mb-2"><strong>Pardos Chicken</strong></h5>
+                    <p class="card-text ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius
+                        lectus sit amet enim ultrices, in dignissim lacus bibendum, in dignissim lacus bibendum.</p>
+                    <div class="text-center p-2">
+                        <a href="#" class="btn-custom">Visitar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
