--- a/src/app/pages/usuario/user-info/user-info.component.html
+++ b/src/app/pages/usuario/user-info/user-info.component.html
@@ -1,1 +1,34 @@
-<p>user-info works!</p>
+<div class="info-contentenido">
+    <div class="cuadrado">
+        <div class="user-img2">
+            <div class="camera-icon">
+                <i class="bi bi-camera-fill"></i>
+            </div>
+            <img src="../../../../assets/images/user-default.png" alt="Imagen de usuario">
+        </div>
+        <div class="user-info">
+            <h3 class="info-title">Información General</h3>
+            <div class="info-content">
+                <div class="info-left">
+                    <h4>Nombre:</h4>
+                    <input type="text" class="form-control" placeholder="Nombre">
+                    <h4>Correo Electrónico:</h4>
+                    <input type="email" class="form-control" placeholder="Correo Electrónico">
+                    <h4>Teléfono:</h4>
+                    <input type="tel" class="form-control" placeholder="Teléfono">
+    
+                </div>
+                <div class="info-right">
+                    <h4>Dirección:</h4>
+                    <input type="text" class="form-control" placeholder="Dirección">
+                    <h4>Ciudad:</h4>
+                    <input type="text" class="form-control" placeholder="Ciudad">
+                    <div class="botones-container">
+                        <button class="btn btn-editar">Editar</button>
+                        <button class="btn btn-guardar">Guardar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
