--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -1,1 +1,10 @@
-<p>registro works!</p>
+<div class="register">
+    <div class="container">
+        <div class="card-register">
+            <img src="../../../assets/images/logo_foodie_rojo.png" class="register-image">
+            <input type="email" placeholder="Email:" class="login-input-email">
+            <input type="password" placeholder="Contraseña:" class="login-input-contraseña">
+            <button class="register-button">REGISTRARSE</button>
+        </div>
+    </div>
+</div>
