Mensaje del a prueba

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,1 @@
-<p>ESTO ES UNA PRUEBA</p>
-<p>Prueba 2</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil totam maxime dolor ipsam ut, adipisci explicabo placeat laborum nulla. Sint modi dolorum adipisci possimus veniam dolores veritatis doloremque atque laboriosam.</p>
