--- a/src/app/pages/usuario/user-ayuda/user-ayuda.component.html
+++ b/src/app/pages/usuario/user-ayuda/user-ayuda.component.html
@@ -1,1 +1,34 @@
-<p>user-ayuda works!</p>
+<div class="ayuda-contenido">
+    <div class="cuadrado">
+        <div class="user-ayuda">
+            <h3 class="ayuda-title">Ayuda</h3>
+            <div class="ayuda-content">
+                <div class="ayuda-center">
+                    <span class="material-symbols-outlined">
+                        account_circle
+                    </span>
+                    <h4>Nombre:</h4>
+                    <input type="text" class="form-control">
+                    <span class="material-symbols-outlined">
+                        mail
+                        </span>
+                    <h4>Correo:</h4>
+                    <input type="email" class="form-control">
+                    <span class="material-symbols-outlined">
+                        feedback
+                        </span>
+                    <h4>Asunto:</h4>
+                    <input type="text" class="form-control">
+                    <span class="material-symbols-outlined">
+                        subject
+                        </span>
+                    <h4>Descripción:</h4>
+                    <input type="text" class="form-control" id="descrip">
+                    <div class="botones-container">
+                        <button class="btn btn-enviar">ENVIAR</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
