Vista de FAQ-darle visto bueno

--- a/src/app/pages/usuario/user-preguntas/user-preguntas.component.html
+++ b/src/app/pages/usuario/user-preguntas/user-preguntas.component.html
@@ -1,1 +1,87 @@
-<p>user-preguntas works!</p>
+<div class="preguntas-contenido">
+    <div class="cuadrado">
+        <div class="user-preguntas">
+            <h3 class="preguntas-title">Preguntas Frecuentes</h3>
+            <div class="preguntas-content">
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                aria-controls="flush-collapseOne">
+                                ¿Como puedo realizar un pedido en la plataforma Foodie?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos nulla sapiente vero saepe qui
+                                     voluptates incidunt aut inventore amet nemo sequi doloribus hic provident alias porro, quas
+                                      quod assumenda quia?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="preguntas-content">
+                    <div class="accordion accordion-flush" id="accordionFlushExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                    aria-controls="flush-collapseTwo">
+                                    ¿Como puedo realizar un pedido en la plataforma Foodie?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">
+                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos nulla sapiente vero saepe qui
+                                    voluptates incidunt aut inventore amet nemo sequi doloribus hic provident alias porro, quas
+                                     quod assumenda quia?</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="preguntas-content">
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button"
+                                        data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
+                                        aria-expanded="false" aria-controls="flush-collapseThree">
+                                        ¿Como puedo realizar un pedido en la plataforma Foodie?
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                    data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">
+                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos nulla sapiente vero saepe qui
+                                            voluptates incidunt aut inventore amet nemo sequi doloribus hic provident alias porro, quas
+                                             quod assumenda quia?</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="preguntas-content">
+                            <div class="accordion accordion-flush" id="accordionFlushExample">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#flush-collapseFour"
+                                            aria-expanded="false" aria-controls="flush-collapseFour">
+                                            ¿Como puedo realizar un pedido en la plataforma Foodie?
+                                        </button>
+                                    </h2>
+                                    <div id="flush-collapseFour" class="accordion-collapse collapse"
+                                        data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">
+                                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos nulla sapiente vero saepe qui
+                                                voluptates incidunt aut inventore amet nemo sequi doloribus hic provident alias porro, quas
+                                                 quod assumenda quia?</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
