--- a/src/app/pages/admin/gestion-rest/gestion-rest.component.css
+++ b/src/app/pages/admin/gestion-rest/gestion-rest.component.css
@@ -2,7 +2,6 @@
     width: 100%;
     border-collapse: collapse;
     border: 1px solid #B10303;
-    /* Líneas en los costados de la tabla */
     color: #500000;
 }
 
@@ -34,59 +33,8 @@
     text-overflow: ellipsis;
 }
 
-.table td img {
-    max-width: 100px;
-    height: auto;
-    display: block;
-    margin: 0 auto;
-}
-
-/* Estilos para cambiar el fondo de los iconos */
-.btn-edit {
-    background-color: #f2ff00;
-    /* Color de fondo para botones de editar y eliminar */
-    color: #000000;
-    /* Color de texto para botones de editar y eliminar */
-    border: none;
-    border-radius: 5px;
-    padding: 5px 10px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.btn-delete {
-    background-color: #ff0000;
-    /* Color de fondo para botones de editar y eliminar */
-    color: #000000;
-    /* Color de texto para botones de editar y eliminar */
-    border: none;
-    border-radius: 5px;
-    padding: 5px 10px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.btn-edit:hover,
-.btn-delete:hover {
-    background-color: #0056b3;
-    /* Cambio de color al pasar el mouse sobre los botones */
-}
-
-/* Estilos para el botón de agregar */
-.btn-agregar {
-    background-color: #28a745;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 8px 16px;
-    font-weight: bold;
-    margin-bottom: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.btn-agregar:hover {
-    background-color: #218838;
+.btnDelete {
+    margin-left: 10%;
 }
 
 /* Estilos para el título "Gestión de Restaurantes" */
