--- a/src/app/pages/admin/gestion-user/gestion-user.component.css
+++ b/src/app/pages/admin/gestion-user/gestion-user.component.css
@@ -24,12 +24,24 @@
     background-color: rgba(255, 241, 241, 1);
 }
 
-.table td img {
-    max-width: 50px;
-    height: auto;
-    display: block;
-    margin: 0 auto;
+.table th:first-child,
+.table td:first-child {
+    border-left: none;
 }
+
+.table th:last-child,
+.table td:last-child {
+    border-right: none;
+}
+
+.table td:nth-child(4) {
+    max-width: 150px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+
 
 .btn-edit {
     background-color: rgba(242, 215, 29, 1);
@@ -41,32 +53,7 @@
     transition: background-color 0.3s ease;
 }
 
-.btn-delete {
-    background-color: rgba(251, 56, 65, 1);
-    color: #000000;
-    border: none;
-    border-radius: 5px;
-    padding: 5px 10px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
 
-.btn-edit:hover{
-    background-color: rgb(210, 188, 51);
-}
-
-.btn-delete:hover {
-    background-color: rgb(207, 65, 72);
-}
-
-.btn-agregar {
-    background-color: rgba(41, 108, 65, 1);
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 8px 16px;
-    font-family: "Rowdies", sans-serif;
-    margin-bottom: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+.btnDelete {
+    margin-left: 10%;
 }
