--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -35,7 +35,7 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+                        <li><button class="dropdown-item" (click)="logOut()">Cerrar sesión</button></li>
                     </ul>
                 </li>
                 <li class="nav-item">
