--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,7 +6,7 @@
                 <input type="email" placeholder="Email:" class="login-input-email" required formControlName="email" name="email" ngModel>
                 <input type="password" placeholder="Contraseña:" class="login-input-contraseña" required formControlName="password" name="password" ngModel>
                 <button type="submit" class="login-button">INICIAR SESIÓN</button>
-                <button class="login-google-button">INICIAR CON GOOGLE</button>
+                <button class="login-google-button" (click)="onGoogle()">INICIAR CON GOOGLE</button>
             </form>
         </div>
     </div>
