--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,184 @@
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil totam maxime dolor ipsam ut, adipisci explicabo placeat laborum nulla. Sint modi dolorum adipisci possimus veniam dolores veritatis doloremque atque laboriosam.</p>
+<div class="banner">
+    <div class="content">
+        <div class="text-container">
+            <h1>LOREM IPSUM DOLOR SIT AMET,</h1>
+            <h1>CONSECTETUR ADIPISCING ...</h1>
+        </div>
+    </div>
+</div>
+<div class="container-fluid">
+    <h2 style="font-size: 22px; margin-top: 35px;">¡Los 10 más elegidos!</h2>
+    <div class="logos-container">
+        <div class="logo">
+            <img src="../../../assets/images/logos_menu/mc_donalds.png" alt="Logotipo 1">
+            <p class="logo-text">McDonald's</p>
+        </div>
+        <div class="logo">
+            <img src="../../../assets/images/logos_menu/bembos.png" alt="Logotipo 2">
+            <p class="logo-text">Bembos</p>
+        </div>
+        <div class="logo">
+            <img src="../../../assets/images/logos_menu/popeyes.png" alt="Logotipo 3">
+            <p class="logo-text">Popeyes</p>
+        </div>
+        <div class="logo">
+            <img src="../../../assets/images/logos_menu/papa_johns.png" alt="Logotipo 4">
+            <p class="logo-text">Papa John's</p>
+        </div>
+        <div class="logo">
+            <img src="../../../assets/images/logos_menu/kfc.png" alt="Logotipo 5">
+            <p class="logo-text">KFC</p>
+        </div>
+        <div class="logo">
+            <img src="../../../assets/images/logos_menu/pardos_chicken.png" alt="Logotipo 6">
+            <p class="logo-text">Pardos Chicken</p>
+        </div>
+        <div class="logo">
+            <img src="../../../assets/images/logos_menu/pizza_hut.png" alt="Logotipo 7">
+            <p class="logo-text">Pizza Hut</p>
+        </div>
+        <div class="logo">
+            <img src="../../../assets/images/logos_menu/burguer_king.png" alt="Logotipo 8">
+            <p class="logo-text">Burger King</p>
+        </div>
+        <div class="logo">
+            <img src="../../../assets/images/logos_menu/fridays.png" alt="Logotipo 9">
+            <p class="logo-text">Fridays</p>
+        </div>
+        <div class="logo">
+            <img src="../../../assets/images/logos_menu/subway.png" alt="Logotipo 10">
+            <p class="logo-text">Subway</p>
+        </div>
+    </div>
+    <div class="general">
+        <div class="row">
+            <div class="col-md-5">
+                <h2 style="font-size: 30px;">SOBRE NOSOTROS</h2>
+                <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
+                    lorem ut nulla consequat,
+                    in varius libero ultrices. Nullam sodales turpis sit amet justo congue, at vehicula mauris
+                    tincidunt.
+                    Fusce interdum magna sed sapien cursus, vitae consequat justo facilisis.Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Sed gravida lorem ut nulla consequat, in varius libero ultrices.
+                </p>
+            </div>
+            <div class="col-md-7">
+                <div class="row">
+                    <div class="col-md-6 d-flex justify-content-center align-items-center">
+                        <img src="../../../assets/images/repartidor.png" alt="repartidor"
+                            class="img-fluid img-sombreada">
+                    </div>
+                    <div class="col-md-6 d-flex justify-content-center align-items-center">
+                        <img src="../../../assets/images/burguer.gif" alt="Descripción del GIF" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <h2 class="text-center" style="font-size: 30px;">VISIÓN</h2>
+                <div class="text-center">
+                    <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
+                        lorem ut nulla consequat,
+                        in varius libero ultrices. Nullam sodales turpis sit amet justo congue, at vehicula mauris
+                        tincidunt.
+                        Fusce interdum magna sed sapien cursus, vitae consequat justo facilisis.Lorem ipsum dolor sit
+                        amet,
+                        consectetur adipiscing elit. Sed gravida lorem ut nulla consequat, in varius libero ultrices.
+                    </p>
+                    <img src="../../../assets/images/vision.jpg" alt="vision"
+                        style="display: block; border-radius: 60px; margin: auto; margin-bottom: 30px;"
+                        class="img-fluid img-sombreada">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h2 class="text-center" style="font-size: 30px;">MISIÓN</h2>
+                <div class="text-center">
+                    <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
+                        lorem ut nulla consequat,
+                        in varius libero ultrices. Nullam sodales turpis sit amet justo congue, at vehicula mauris
+                        tincidunt.
+                        Fusce interdum magna sed sapien cursus, vitae consequat justo facilisis.Lorem ipsum dolor sit
+                        amet,
+                        consectetur adipiscing elit. Sed gravida lorem ut nulla consequat, in varius libero ultrices.
+                    </p>
+                    <img src="../../../assets/images/mision.jpg" alt="mision"
+                        style="display: block; border-radius: 60px; margin: auto; margin-bottom: 30px;"
+                        class="img-fluid img-sombreada">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="text-center" style="font-size: 30px;">NUESTROS PRODUCTOS</h2>
+                <span class="linea"></span>
+                <section class="galeria">
+                    <a href="#image1">
+                        <img src="../../../assets/images/galeria/p1.jpg" alt=""></a>
+                    <a href="#image2">
+                        <img src="../../../assets/images/galeria/p2.jpg" alt=""></a>
+                    <a href="#image3">
+                        <img src="../../../assets/images/galeria/p3.jpeg" alt=""></a>
+                    <a href="#image4">
+                        <img src="../../../assets/images/galeria/p4.png" alt=""></a>
+                    <a href="#image5">
+                        <img src="../../../assets/images/galeria/p5.png" alt=""></a>
+                    <a href="#image6">
+                        <img src="../../../assets/images/galeria/p6.png" alt=""></a>
+                    <a href="#image7">
+                        <img src="../../../assets/images/galeria/p7.jpg" alt=""></a>
+                    <a href="#image8">
+                        <img src="../../../assets/images/galeria/p8.png" alt=""></a>
+                </section>
+                <article class="light-box" id="image1">
+                    <a href="#image8" class="next"><i class="bi bi-chevron-double-left"></i></a>
+                    <img src="../../../assets/images/galeria/p1.jpg" alt="">
+                    <a href="#image2" class="next"><i class="bi bi-chevron-double-right"></i></a>
+                    <a href="#" class="close">X</a>
+                </article>
+                <article class="light-box" id="image2">
+                    <a href="#image1" class="next"><i class="bi bi-chevron-double-left"></i></a>
+                    <img src="../../../assets/images/galeria/p2.jpg" alt="">
+                    <a href="#image3" class="next"><i class="bi bi-chevron-double-right"></i></a>
+                    <a href="#" class="close">X</a>
+                </article>
+                <article class="light-box" id="image3">
+                    <a href="#image2" class="next"><i class="bi bi-chevron-double-left"></i></a>
+                    <img src="../../../assets/images/galeria/p3.jpeg" alt="">
+                    <a href="#image4" class="next"><i class="bi bi-chevron-double-right"></i></a>
+                    <a href="#" class="close">X</a>
+                </article>
+                <article class="light-box" id="image4">
+                    <a href="#image3" class="next"><i class="bi bi-chevron-double-left"></i></a>
+                    <img src="../../../assets/images/galeria/p4.png" alt="">
+                    <a href="#image5" class="next"><i class="bi bi-chevron-double-right"></i></a>
+                    <a href="#" class="close">X</a>
+                </article>
+                <article class="light-box" id="image5">
+                    <a href="#image4" class="next"><i class="bi bi-chevron-double-left"></i></a>
+                    <img src="../../../assets/images/galeria/p5.png" alt="">
+                    <a href="#image6" class="next"><i class="bi bi-chevron-double-right"></i></a>
+                    <a href="#" class="close">X</a>
+                </article>
+                <article class="light-box" id="image6">
+                    <a href="#image5" class="next"><i class="bi bi-chevron-double-left"></i></a>
+                    <img src="../../../assets/images/galeria/p6.png" alt="">
+                    <a href="#image7" class="next"><i class="bi bi-chevron-double-right"></i></a>
+                    <a href="#" class="close">X</a>
+                </article>
+                <article class="light-box" id="image7">
+                    <a href="#image6" class="next"><i class="bi bi-chevron-double-left"></i></a>
+                    <img src="../../../assets/images/galeria/p7.jpg" alt="">
+                    <a href="#image8" class="next"><i class="bi bi-chevron-double-right"></i></a>
+                    <a href="#" class="close">X</a>
+                </article>
+                <article class="light-box" id="image8">
+                    <a href="#image7" class="next"><i class="bi bi-chevron-double-left"></i></a>
+                    <img src="../../../assets/images/galeria/p8.png" alt="">
+                    <a href="#image1" class="next"><i class="bi bi-chevron-double-right"></i></a>
+                    <a href="#" class="close">X</a>
+                </article>
+            </div>
+        </div>
+    </div>
+</div>
